--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body id="page-top">
-    <nav class="navbar navbar-expand-lg navbar-dark border-bottom  bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">Faustin250</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link nav-visited js-scroll-trigger" href="#about">About</a>
+                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -286,148 +286,165 @@
     </section>
 
     <section id="testimonials">
-
-        <div class="container portfolio_container">
-            <h2 class="about_heading">TESTIMONIALS</h2>
-            <div class="container portfolio_container2">
-                <div class="row inner_container">
-                    <div class="outer_container">
-                        <div class="inner_container">
-
-                        </div>
-                    </div>
+        <h2 class="about_heading">TESTIMONIALS</h2>
 
 
+        <div class="outer_container">
+            <div class="testimonies_container1">
+                <!-- In the 3rd section, go to http://testimonial-generator.com/index.php, create 10 testimanials for "firstname web developer" and create 10 paragphs for each testimonial-->
 
 
+                <!-- Rotating card -->
+                <div class="card-wrapper portfolio_style1 " style="width:20rem;" style="width:20rem;">
+                    <div id="card-2" class="card card-rotating text-center">
 
-                    <div class="col-lg-4 col-md-4 col-sm-4">
-                        <!-- Rotating card -->
-                        <div class="card-wrapper portfolio_style">
-                            <div id="card-2" class="card card-rotating text-center">
+                        <!--Front Side-->
+                        <div class="face front">
 
-                                <!--Front Side-->
-                                <div class="face front">
-
-                                    <!-- Image-->
-                                    <div class="view overlay testimonials_image">
-                                        <img class="card-img-top image_style"
-                                            src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
-                                    </div>
-
-                                    <!--Content-->
-                                    <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Krzysztof Godlewski</h4>
-                                        <h4 class="card_title_2">Head of web</h4>
-                                        <a href="#" class="fa fa-linkedin"></a>
-                                        <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Fugiat tenetur odio suscipit
-                                            non commodi vel eius veniam maxime.</p>
-                                    </div>
-
-                                </div>
-
+                            <!-- Image-->
+                            <div class="view overlay testimonials_image">
+                                <img class="card-img-top image_style"
+                                    src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
                             </div>
-                        </div>
-                        <!-- Rotating card -->
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4">
 
-                        <!-- Rotating card -->
-                        <div class="card-wrapper portfolio_style">
-                            <div id="card-2" class="card card-rotating text-center">
-
-                                <!--Front Side-->
-                                <div class="face front">
-
-                                    <!-- Image-->
-                                    <div class="view overlay testimonials_image">
-                                        <img class="card-img-top image_style"
-                                            src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
-                                    </div>
-
-                                    <!--Content-->
-                                    <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Card title</h4>
-                                        <h4 class="card_title_2">Card title</h4>
-                                        <a href="#" class="fa fa-linkedin"></a>
-                                        <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Fugiat tenetur odio suscipit
-                                            non commodi vel eius veniam maxime.</p>
-                                    </div>
-
-
-                                </div>
-
+                            <!--Content-->
+                            <div class="card-body card_body_style">
+                                <h4 class="card_title_1">Krzysztof Godlewski</h4>
+                                <h4 class="card_title_2">Head of web</h4>
+                                <a href="#" class="fa fa-linkedin"></a>
+                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Fugiat tenetur odio suscipit
+                                    non commodi vel eius veniam maxime.</p>
                             </div>
-                        </div>
-                        <!-- Rotating card -->
 
+                        </div>
 
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4">
-                        <!-- Rotating card -->
-                        <div class="card-wrapper portfolio_style">
-                            <div id="card-2" class="card card-rotating text-center">
+                </div>
+                <!-- Rotating card -->
 
-                                <!--Front Side-->
-                                <div class="face front">
+                <!-- Rotating card -->
+                <div class="card-wrapper portfolio_style1 " style="width:20rem;">
+                    <div id="card-2" class="card card-rotating text-center">
 
-                                    <!-- Image-->
-                                    <div class="view overlay testimonials_image">
-                                        <img class="card-img-top image_style"
-                                            src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
-                                    </div>
+                        <!--Front Side-->
+                        <div class="face front">
 
-                                    <!--Content-->
-                                    <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Marcin Majchrzak</h4>
-                                        <h4 class="card_title_2">Backend & Blockchain Developer</h4>
-                                        <a href="#" class="fa fa-linkedin"></a>
-                                        <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Fugiat tenetur odio suscipit
-                                            non commodi vel eius veniam maxime.</p>
-                                    </div>
-
-                                </div>
-
+                            <!-- Image-->
+                            <div class="view overlay testimonials_image">
+                                <img class="card-img-top image_style"
+                                    src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
                             </div>
-                        </div>
-                        <!-- Rotating card -->
 
+                            <!--Content-->
+                            <div class="card-body card_body_style">
+                                <h4 class="card_title_1">Krzysztof Godlewski</h4>
+                                <h4 class="card_title_2">Head of web</h4>
+                                <a href="#" class="fa fa-linkedin"></a>
+                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Fugiat tenetur odio suscipit
+                                    non commodi vel eius veniam maxime.</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+                <!-- Rotating card -->
+
+                <!-- Rotating card -->
+                <div class="card-wrapper portfolio_style1 " style="width:20rem;">
+                    <div id="card-2" class="card card-rotating text-center">
+
+                        <!--Front Side-->
+                        <div class="face front">
+
+                            <!-- Image-->
+                            <div class="view overlay testimonials_image">
+                                <img class="card-img-top image_style"
+                                    src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
+                            </div>
+
+                            <!--Content-->
+                            <div class="card-body card_body_style">
+                                <h4 class="card_title_1">Krzysztof Godlewski</h4>
+                                <h4 class="card_title_2">Head of web</h4>
+                                <a href="#" class="fa fa-linkedin"></a>
+                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Fugiat tenetur odio suscipit
+                                    non commodi vel eius veniam maxime.</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- Rotating card -->
+                <div class="card-wrapper portfolio_style1 " style="width:20rem;">
+                    <div id="card-2" class="card card-rotating text-center">
+
+                        <!--Front Side-->
+                        <div class="face front">
+
+                            <!-- Image-->
+                            <div class="view overlay testimonials_image">
+                                <img class="card-img-top image_style"
+                                    src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
+                            </div>
+
+                            <!--Content-->
+                            <div class="card-body card_body_style">
+                                <h4 class="card_title_1">Krzysztof Godlewski</h4>
+                                <h4 class="card_title_2">Head of web</h4>
+                                <a href="#" class="fa fa-linkedin"></a>
+                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Fugiat tenetur odio suscipit
+                                    non commodi vel eius veniam maxime.</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- Rotating card -->
+                <div class="card-wrapper portfolio_style1 " style="width:20rem;">
+                    <div id="card-2" class="card card-rotating text-center">
+
+                        <!--Front Side-->
+                        <div class="face front">
+
+                            <!-- Image-->
+                            <div class="view overlay testimonials_image">
+                                <img class="card-img-top image_style"
+                                    src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
+                            </div>
+
+                            <!--Content-->
+                            <div class="card-body card_body_style">
+                                <h4 class="card_title_1">Krzysztof Godlewski</h4>
+                                <h4 class="card_title_2">Head of web</h4>
+                                <a href="#" class="fa fa-linkedin"></a>
+                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Fugiat tenetur odio suscipit
+                                    non commodi vel eius veniam maxime.</p>
+                            </div>
+
+                        </div>
 
                     </div>
                 </div>
 
             </div>
 
-
+        </div>
     </section>
 
     <section id="contact" class="bg-light">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2>Contact us</h2>
-                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Vero odio fugiat
-                        voluptatem dolor,
-                        provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae
-                        magnam et repudiandae
-                        ipsa
-                        exercitationem, in, quo totam.</p>
-                </div>
-            </div>
-        </div>
+
     </section>
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
-        </div>
-        <!-- /.container -->
-    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="js/animate.js"></script>
 
