Adding Contact details

--- a/index.html
+++ b/index.html
@@ -443,9 +443,70 @@
 
     <section id="contact" class="bg-light">
 
+
+
+        <div class="container contact-details">
+            <h2 class="contact_style">CONTACT</h2>
+            <p class="card-text3">
+                Reach out to me. I would love to help you.
+            </p>
+            <div class="row contact_style1">
+                <div class="col-lg-7 col-md-7 col-sm-12">xzzzzzzz</div>
+                <div class="col-lg-5 col-md-5 col-sm-12">
+
+                    <!-- contacts card -->
+                    <div class="card card-default" id="card_contacts">
+                        <div id="contacts" class="panel-collapse collapse show" aria-expanded="true" style="">
+                            <ul class="list-group pull-down" id="contact-list">
+
+
+                                <li class="list-group-item">
+                                    <div class="row w-100">
+                                        <div class="col-12 col-sm-6 col-md-3 px-0">
+                                            <img src="http://demos.themes.guide/bodeo/assets/images/users/m105.jpg"
+                                                alt="Seth Frazier" class="img-fluid rounded-circle d-block mx-auto">
+                                        </div>
+                                        <div class="col-12 col-sm-6 col-md-9 text-center text-sm-left">
+                                            <span class="name lead">Ukundimana Faustin</span>
+                                            <br>
+                                            <span class="fa fa-map-marker fa-fw text-muted" data-toggle="tooltip"
+                                                title="" data-original-title="7396 E North St"></span>
+                                            <span class="text-muted">7396 E North St</span>
+                                            <br>
+                                            <span class="fa fa-phone fa-fw text-muted" data-toggle="tooltip" title=""
+                                                data-original-title="(560) 180-4143"></span>
+                                            <span class="text-muted small">(560) 180-4143</span>
+                                            <br>
+                                            <span class="fa fa-envelope fa-fw text-muted" data-toggle="tooltip" title=""
+                                                data-original-title="seth.frazier@example.com"></span>
+                                            <span class="text-muted small text-truncate">seth.frazier@example.com</span>
+                                        </div>
+                                    </div>
+                                </li>
+
+
+
+
+
+
+
+
+                            </ul>
+                            <!--/contacts list-->
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+        </div>
+
     </section>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js">
+    </script>
+
     <script src="js/animate.js"></script>
 
     <script src="vendor/jquery/jquery.min.js"></script>
