--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <h1 class="myName">UKUNDIMANA FAUSTIN</h1>
                         <p class="ml3">Frontend Developer</p>
 
-                        <a href="https://www.seguetech.com/ajax-technology/" class="button2">GET IN TOUCH</a>
+                        <a href="#contact" class="button2 js-scroll-trigger">GET IN TOUCH</a>
 
                     </div>
                 </div>
@@ -77,11 +77,7 @@
                                 I'm a Frontend Developer living in Rwanda, I am experienced with building
                                 websites using HTML,CSS and BOOTSTRAP.
                             </p>
-                            <a href="#" class="fa fa-facebook"></a>
-                            <a href="#" class="fa fa-twitter"></a>
-                            <a href="#" class="fa fa-instagram"></a>
-                            <a href="#" class="fa fa-linkedin"></a>
-                            <a href="#" class="fa fa-github"></a>
+
                         </div>
                     </div>
                 </div>
@@ -103,28 +99,28 @@
 
                             <div class="progress">
 
-                                <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25"
-                                    aria-valuemin="0" aria-valuemax="100">50%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100">80%</div>
                             </div>
 
 
                             <li>CSS</li>
                             <div class="progress">
 
-                                <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25"
-                                    aria-valuemin="0" aria-valuemax="100">50%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100">70%</div>
                             </div>
                             <li>BOOTSTRAP</li>
                             <div class="progress">
 
-                                <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25"
-                                    aria-valuemin="0" aria-valuemax="100">50%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100">70%</div>
                             </div>
                             <li>JAVASCRIPT</li>
                             <div class="progress">
 
-                                <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25"
-                                    aria-valuemin="0" aria-valuemax="100">50%</div>
+                                <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100">30%</div>
                             </div>
                         </ul>
 
@@ -152,19 +148,17 @@
 
                                     <!-- Image-->
                                     <div class="view overlay testimonials_image">
-                                        <img class="card-img-top"
-                                            src="https://mdbootstrap.com/img/Photos/Others/photo5.jpg"
-                                            alt="Example photo">
+                                        <img class="card-img-top" src="./resources/project1.png" alt="Example photo">
                                     </div>
 
                                     <!--Content-->
                                     <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Card title</h4>
+                                        <h4 class="card_title_1">Personal portfolio</h4>
                                         <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                             Fugiat tenetur odio suscipit
                                             non commodi vel eius veniam maxime.</p>
                                     </div>
-                                    <a href="https://www.seguetech.com/ajax-technology/" class="button3">VIEW ON
+                                    <a href="https://github.com/Faustin250/personal_Portfolio" class="button3">VIEW ON
                                         GITHUB</a>
 
 
@@ -185,19 +179,17 @@
 
                                     <!-- Image-->
                                     <div class="view overlay testimonials_image">
-                                        <img class="card-img-top"
-                                            src="https://mdbootstrap.com/img/Photos/Others/photo5.jpg"
-                                            alt="Example photo">
+                                        <img class="card-img-top" src="./resources/project2.png" alt="Example photo">
                                     </div>
 
                                     <!--Content-->
                                     <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Card title</h4>
+                                        <h4 class="card_title_1">Tribute Page</h4>
                                         <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                             Fugiat tenetur odio suscipit
                                             non commodi vel eius veniam maxime.</p>
                                     </div>
-                                    <a href="https://www.seguetech.com/ajax-technology/" class="button3">VIEW ON
+                                    <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
                                         GITHUB</a>
 
                                 </div>
@@ -218,19 +210,17 @@
 
                                     <!-- Image-->
                                     <div class="view overlay testimonials_image">
-                                        <img class="card-img-top"
-                                            src="https://mdbootstrap.com/img/Photos/Others/photo5.jpg"
-                                            alt="Example photo">
+                                        <img class="card-img-top" src="./resources/project1.png" alt="Example photo">
                                     </div>
 
                                     <!--Content-->
                                     <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Card title</h4>
+                                        <h4 class="card_title_1">Personal portfolio</h4>
                                         <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                             Fugiat tenetur odio suscipit
                                             non commodi vel eius veniam maxime.</p>
                                     </div>
-                                    <a href="https://www.seguetech.com/ajax-technology/" class="button3">VIEW ON
+                                    <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
                                         GITHUB</a>
 
                                 </div>
@@ -251,19 +241,17 @@
 
                                     <!-- Image-->
                                     <div class="view overlay testimonials_image">
-                                        <img class="card-img-top"
-                                            src="https://mdbootstrap.com/img/Photos/Others/photo5.jpg"
-                                            alt="Example photo">
+                                        <img class="card-img-top" src="./resources/project2.png" alt="Example photo">
                                     </div>
 
                                     <!--Content-->
                                     <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Card title</h4>
+                                        <h4 class="card_title_1">Tribute Page</h4>
                                         <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                             Fugiat tenetur odio suscipit
                                             non commodi vel eius veniam maxime.</p>
                                     </div>
-                                    <a href="https://www.seguetech.com/ajax-technology/" class="button3">VIEW ON
+                                    <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
                                         GITHUB</a>
 
                                 </div>
@@ -451,7 +439,12 @@
                 Reach out to me. I would love to help you.
             </p>
             <div class="row contact_style1">
-                <div class="col-lg-7 col-md-7 col-sm-12">xzzzzzzz</div>
+                <div class="col-lg-7 col-md-7 col-sm-12">
+                    <iframe
+                        src="https://docs.google.com/forms/d/e/1FAIpQLScYX91x-Oi3nqQq7YAOcibxn4Z8Mab4vYOWyPqLI3I-I54a3A/viewform?embedded=true"
+                        width="600" height="420" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+                </div>
                 <div class="col-lg-5 col-md-5 col-sm-12">
 
                     <!-- contacts card -->
@@ -463,7 +456,7 @@
                                 <li class="list-group-item">
                                     <div class="row w-100">
                                         <div class="col-12 col-sm-6 col-md-3 px-0">
-                                            <img src="http://demos.themes.guide/bodeo/assets/images/users/m105.jpg"
+                                            <img src="https://scontent.fkgl3-1.fna.fbcdn.net/v/t1.0-9/14232415_677086562446928_5310865549342761984_n.jpg?_nc_cat=108&_nc_eui2=AeG0q7519XpbgV0nMSA8x1JBNFgQYsnwhPQViOkIWRaT_ocIzhGWo-14-4FBYNfCOZAG10Cj415KdbqeW6nLr0q4ZbFg8sUgjE9OZ8BfuuzBpA&_nc_ohc=VTxkjymv0v8AX-yt7XK&_nc_ht=scontent.fkgl3-1.fna&oh=650fefd78b01f9628fc8e22032857e52&oe=5ED4E99D"
                                                 alt="Seth Frazier" class="img-fluid rounded-circle d-block mx-auto">
                                         </div>
                                         <div class="col-12 col-sm-6 col-md-9 text-center text-sm-left">
@@ -475,12 +468,23 @@
                                             <br>
                                             <span class="fa fa-phone fa-fw text-muted" data-toggle="tooltip" title=""
                                                 data-original-title="(560) 180-4143"></span>
-                                            <span class="text-muted small">(560) 180-4143</span>
+                                            <span class="text-muted small">+250786114086</span>
                                             <br>
                                             <span class="fa fa-envelope fa-fw text-muted" data-toggle="tooltip" title=""
                                                 data-original-title="seth.frazier@example.com"></span>
-                                            <span class="text-muted small text-truncate">seth.frazier@example.com</span>
+                                            <span class="text-muted small text-truncate">fukundimana@gmail.com</span>
+
+
+
                                         </div>
+
+
+                                        <div class="icons">
+                                            <a href="#" class="fa fa-facebook"></a>
+                                            <a href="#" class="fa fa-twitter"></a>
+                                            <a href="#" class="fa fa-instagram"></a>
+                                            <a href="#" class="fa fa-linkedin"></a>
+                                            <a href="#" class="fa fa-github"></a> </div>
                                     </div>
                                 </li>
 
@@ -503,6 +507,25 @@
         </div>
 
     </section>
+
+    <footer id="sticky-footer" class="py-4 text-white-50">
+        <div class="container " style=" height: 1rem;">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4"><small>© 2019 Faustin250 | All rights reserved. </small></div>
+                <div class="col-lg-4 col-md-4 col-sm-4"> </div>
+                <div class="col-lg-4  col-md-4 col-sm-4"><small> Made with <span id="about-heart">♥</span> At <a
+                            href="https://www.codingzeroto100.com/" class="button4">CodingZeroTo100</a></small></div>
+
+            </div>
+        </div>
+
+
+
+
+
+
+
+    </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js">
     </script>
