Made google form responsive

--- a/index.html
+++ b/index.html
@@ -292,13 +292,42 @@
                             <!-- Image-->
                             <div class="view overlay testimonials_image">
                                 <img class="card-img-top image_style"
-                                    src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
+                                    src="https://randomuser.me/api/portraits/men/22.jpg" alt="Example photo">
+                            </div>
+
+                            <!--Content-->
+                            <div class="card-body card_body_style">
+                                <h4 class="card_title_1">Grant Roscoe</h4>
+                                <h4 class="card_title_2">CEO & Founder</h4>
+                                <a href="#" class="fa fa-linkedin"></a>
+                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Fugiat tenetur odio suscipit
+                                    non commodi vel eius veniam maxime.</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+                <!-- Rotating card -->
+
+                <!-- Rotating card -->
+                <div class="card-wrapper portfolio_style1 " style="width:20rem;">
+                    <div id="card-2" class="card card-rotating text-center">
+
+                        <!--Front Side-->
+                        <div class="face front">
+
+                            <!-- Image-->
+                            <div class="view overlay testimonials_image">
+                                <img class="card-img-top image_style"
+                                    src="https://randomuser.me/api/portraits/men/85.jpg" alt="Example photo">
                             </div>
 
                             <!--Content-->
                             <div class="card-body card_body_style">
                                 <h4 class="card_title_1">Krzysztof Godlewski</h4>
-                                <h4 class="card_title_2">Head of web</h4>
+                                <h4 class="card_title_2">Product Manager</h4>
                                 <a href="#" class="fa fa-linkedin"></a>
                                 <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                     Fugiat tenetur odio suscipit
@@ -326,37 +355,8 @@
 
                             <!--Content-->
                             <div class="card-body card_body_style">
-                                <h4 class="card_title_1">Krzysztof Godlewski</h4>
-                                <h4 class="card_title_2">Head of web</h4>
-                                <a href="#" class="fa fa-linkedin"></a>
-                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Fugiat tenetur odio suscipit
-                                    non commodi vel eius veniam maxime.</p>
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-                <!-- Rotating card -->
-
-                <!-- Rotating card -->
-                <div class="card-wrapper portfolio_style1 " style="width:20rem;">
-                    <div id="card-2" class="card card-rotating text-center">
-
-                        <!--Front Side-->
-                        <div class="face front">
-
-                            <!-- Image-->
-                            <div class="view overlay testimonials_image">
-                                <img class="card-img-top image_style"
-                                    src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
-                            </div>
-
-                            <!--Content-->
-                            <div class="card-body card_body_style">
-                                <h4 class="card_title_1">Krzysztof Godlewski</h4>
-                                <h4 class="card_title_2">Head of web</h4>
+                                <h4 class="card_title_1">Dennis van der Vecht</h4>
+                                <h4 class="card_title_2">Fullstack Developer</h4>
                                 <a href="#" class="fa fa-linkedin"></a>
                                 <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                     Fugiat tenetur odio suscipit
@@ -378,13 +378,13 @@
                             <!-- Image-->
                             <div class="view overlay testimonials_image">
                                 <img class="card-img-top image_style"
-                                    src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
+                                    src="https://randomuser.me/api/portraits/women/45.jpg" alt="Example photo">
                             </div>
 
                             <!--Content-->
                             <div class="card-body card_body_style">
-                                <h4 class="card_title_1">Krzysztof Godlewski</h4>
-                                <h4 class="card_title_2">Head of web</h4>
+                                <h4 class="card_title_1">Anna Gut</h4>
+                                <h4 class="card_title_2">Backed Developer</h4>
                                 <a href="#" class="fa fa-linkedin"></a>
                                 <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                     Fugiat tenetur odio suscipit
@@ -406,13 +406,13 @@
                             <!-- Image-->
                             <div class="view overlay testimonials_image">
                                 <img class="card-img-top image_style"
-                                    src="https://randomuser.me/api/portraits/men/36.jpg" alt="Example photo">
+                                    src="https://randomuser.me/api/portraits/men/83.jpg" alt="Example photo">
                             </div>
 
                             <!--Content-->
                             <div class="card-body card_body_style">
-                                <h4 class="card_title_1">Krzysztof Godlewski</h4>
-                                <h4 class="card_title_2">Head of web</h4>
+                                <h4 class="card_title_1">Jakub Jodełka</h4>
+                                <h4 class="card_title_2">UI/UX Designer</h4>
                                 <a href="#" class="fa fa-linkedin"></a>
                                 <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                     Fugiat tenetur odio suscipit
@@ -440,16 +440,19 @@
             </p>
             <div class="row contact_style1">
                 <div class="col-lg-7 col-md-7 col-sm-12">
-                    <iframe
-                        src="https://docs.google.com/forms/d/e/1FAIpQLScYX91x-Oi3nqQq7YAOcibxn4Z8Mab4vYOWyPqLI3I-I54a3A/viewform?embedded=true"
-                        width="600" height="420" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                    <div id="contact-container">
+                        <iframe
+                            src="https://docs.google.com/forms/d/e/1FAIpQLScYX91x-Oi3nqQq7YAOcibxn4Z8Mab4vYOWyPqLI3I-I54a3A/viewform?embedded=true"
+                            width="600" height="420" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+                    </div>
 
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-12">
 
                     <!-- contacts card -->
                     <div class="card card-default" id="card_contacts">
-                        <div id="contacts" class="panel-collapse collapse show" aria-expanded="true" style="">
+                        <div id="contacts" class="panel-collapse collapse show" aria-expanded="true">
                             <ul class="list-group pull-down" id="contact-list">
 
 
@@ -487,18 +490,11 @@
                                             <a href="#" class="fa fa-github"></a> </div>
                                     </div>
                                 </li>
-
-
-
-
-
-
-
-
                             </ul>
                             <!--/contacts list-->
                         </div>
                     </div>
+
                 </div>
 
 
@@ -518,14 +514,9 @@
 
             </div>
         </div>
-
-
-
-
-
-
-
     </footer>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js">
     </script>
