made a portofolio pictures online links

--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
 
                                     <!-- Image-->
                                     <div class="view overlay testimonials_image">
-                                        <img class="card-img-top" src="./resources/project1.png" alt="Example photo">
+                                        <img class="card-img-top"
+                                            src="https://github.com/Faustin250/personal_Portfolio/blob/master/resources/project1.PNG?raw=true"
+                                            alt="Example photo">
                                     </div>
 
                                     <!--Content-->
@@ -179,7 +181,9 @@
 
                                     <!-- Image-->
                                     <div class="view overlay testimonials_image">
-                                        <img class="card-img-top" src="./resources/project2.png" alt="Example photo">
+                                        <img class="card-img-top"
+                                            src="https://github.com/Faustin250/personal_Portfolio/blob/master/resources/project2.PNG?raw=true"
+                                            alt="Example photo">
                                     </div>
 
                                     <!--Content-->
@@ -210,7 +214,9 @@
 
                                     <!-- Image-->
                                     <div class="view overlay testimonials_image">
-                                        <img class="card-img-top" src="./resources/project1.png" alt="Example photo">
+                                        <img class="card-img-top"
+                                            src="https://github.com/Faustin250/personal_Portfolio/blob/master/resources/project1.PNG?raw=true"
+                                            alt="Example photo">
                                     </div>
 
                                     <!--Content-->
@@ -241,7 +247,9 @@
 
                                     <!-- Image-->
                                     <div class="view overlay testimonials_image">
-                                        <img class="card-img-top" src="./resources/project2.png" alt="Example photo">
+                                        <img class="card-img-top"
+                                            src="https://github.com/Faustin250/personal_Portfolio/blob/master/resources/project2.PNG?raw=true"
+                                            alt="Example photo">
                                     </div>
 
                                     <!--Content-->
