edited portfolio projects descriptions

--- a/index.html
+++ b/index.html
@@ -156,9 +156,8 @@
                                     <!--Content-->
                                     <div class="card-body card_body_style">
                                         <h4 class="card_title_1">Personal portfolio</h4>
-                                        <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Fugiat tenetur odio suscipit
-                                            non commodi vel eius veniam maxime.</p>
+                                        <p class="card-text1">Portfolio site which showcases my projects. I used HTML,
+                                            CSS and Bootstrap</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/personal_Portfolio" class="button3">VIEW ON
                                         GITHUB</a>
@@ -189,9 +188,8 @@
                                     <!--Content-->
                                     <div class="card-body card_body_style">
                                         <h4 class="card_title_1">Tribute Page</h4>
-                                        <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Fugiat tenetur odio suscipit
-                                            non commodi vel eius veniam maxime.</p>
+                                        <p class="card-text1"> Biograph page of Martin Luther King Jr. Built using plain
+                                            HTML and CSS</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
                                         GITHUB</a>
@@ -221,10 +219,10 @@
 
                                     <!--Content-->
                                     <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Personal portfolio</h4>
-                                        <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Fugiat tenetur odio suscipit
-                                            non commodi vel eius veniam maxime.</p>
+                                        <h4 class="card_title_1">Portfolio site</h4>
+                                        <p class="card-text1">Portfolio site which showcases my projects. Built with
+                                            HTML,
+                                            CSS and Bootstrap</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
                                         GITHUB</a>
@@ -307,10 +305,9 @@
                             <div class="card-body card_body_style">
                                 <h4 class="card_title_1">Grant Roscoe</h4>
                                 <h4 class="card_title_2">CEO & Founder</h4>
-                                <a href="#" class="fa fa-linkedin"></a>
-                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Fugiat tenetur odio suscipit
-                                    non commodi vel eius veniam maxime.</p>
+                                <a href="https://www.linkedin.com/in/faustin250/" class="fa fa-linkedin"></a>
+                                <p class="card-text1">I don't always clop, but when I do, it's because of Faustin . I
+                                    will refer everyone I know. I'd be lost without Faustin</p>
                             </div>
 
                         </div>
@@ -336,10 +333,9 @@
                             <div class="card-body card_body_style">
                                 <h4 class="card_title_1">Krzysztof Godlewski</h4>
                                 <h4 class="card_title_2">Product Manager</h4>
-                                <a href="#" class="fa fa-linkedin"></a>
-                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Fugiat tenetur odio suscipit
-                                    non commodi vel eius veniam maxime.</p>
+                                <a href="https://www.linkedin.com/in/faustin250/" class="fa fa-linkedin"></a>
+                                <p class="card-text1">I love your system. Buy this now. Faustin is the most valuable
+                                    business resource we have EVER purchased.</p>
                             </div>
 
                         </div>
@@ -365,10 +361,9 @@
                             <div class="card-body card_body_style">
                                 <h4 class="card_title_1">Dennis van der Vecht</h4>
                                 <h4 class="card_title_2">Fullstack Developer</h4>
-                                <a href="#" class="fa fa-linkedin"></a>
-                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Fugiat tenetur odio suscipit
-                                    non commodi vel eius veniam maxime.</p>
+                                <a href="https://www.linkedin.com/in/faustin250/" class="fa fa-linkedin"></a>
+                                <p class="card-text1">Faustin is both attractive and highly adaptable. It's exactly what
+                                    I've been looking for.</p>
                             </div>
 
                         </div>
@@ -393,10 +388,9 @@
                             <div class="card-body card_body_style">
                                 <h4 class="card_title_1">Anna Gut</h4>
                                 <h4 class="card_title_2">Backed Developer</h4>
-                                <a href="#" class="fa fa-linkedin"></a>
-                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Fugiat tenetur odio suscipit
-                                    non commodi vel eius veniam maxime.</p>
+                                <a href="https://www.linkedin.com/in/faustin250/" class="fa fa-linkedin"></a>
+                                <p class="card-text1">I don't always clop, but when I do, it's because of Faustin . I
+                                    will refer everyone I know. I'd be lost without Faustin</p>
                             </div>
 
                         </div>
@@ -421,10 +415,9 @@
                             <div class="card-body card_body_style">
                                 <h4 class="card_title_1">Jakub Jodełka</h4>
                                 <h4 class="card_title_2">UI/UX Designer</h4>
-                                <a href="#" class="fa fa-linkedin"></a>
-                                <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Fugiat tenetur odio suscipit
-                                    non commodi vel eius veniam maxime.</p>
+                                <a href="https://www.linkedin.com/in/faustin250/" class="fa fa-linkedin"></a>
+                                <p class="card-text1">It's just amazing. We were treated like royalty. We have no
+                                    regrets! Faustin is the real deal!</p>
                             </div>
 
                         </div>
@@ -491,11 +484,13 @@
 
 
                                         <div class="icons">
-                                            <a href="#" class="fa fa-facebook"></a>
+                                            <a href="https://web.facebook.com/Faustin250" class="fa fa-facebook"></a>
                                             <a href="#" class="fa fa-twitter"></a>
-                                            <a href="#" class="fa fa-instagram"></a>
-                                            <a href="#" class="fa fa-linkedin"></a>
-                                            <a href="#" class="fa fa-github"></a> </div>
+                                            <a href="https://www.instagram.com/faustin_250_/"
+                                                class="fa fa-instagram"></a>
+                                            <a href="https://www.linkedin.com/in/faustin250/"
+                                                class="fa fa-linkedin"></a>
+                                            <a href="https://github.com/Faustin250" class="fa fa-github"></a> </div>
                                     </div>
                                 </li>
                             </ul>
