edited portfolio projects descriptions

--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
 
                                     <!--Content-->
                                     <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Personal portfolio</h4>
-                                        <p class="card-text1">Portfolio site which showcases my projects. I used HTML,
+                                        <h4 class="card_title_1">Portfolio site</h4>
+                                        <p class="card-text1">Portfolio site which showcases my projects. Built with
+                                            HTML,
                                             CSS and Bootstrap</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/personal_Portfolio" class="button3">VIEW ON
@@ -253,9 +254,8 @@
                                     <!--Content-->
                                     <div class="card-body card_body_style">
                                         <h4 class="card_title_1">Tribute Page</h4>
-                                        <p class="card-text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Fugiat tenetur odio suscipit
-                                            non commodi vel eius veniam maxime.</p>
+                                        <p class="card-text1"> Biograph page of Martin Luther King Jr. Built using plain
+                                            HTML and CSS</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
                                         GITHUB</a>
