changed social media button and porfolio projects

--- a/index.html
+++ b/index.html
@@ -253,9 +253,10 @@
 
                                     <!--Content-->
                                     <div class="card-body card_body_style">
-                                        <h4 class="card_title_1">Tribute Page</h4>
-                                        <p class="card-text1"> Biograph page of Martin Luther King Jr. Built using plain
-                                            HTML and CSS</p>
+                                        <h4 class="card_title_1">Application form</h4>
+                                        <p class="card-text1">Application form for a coding bootcamp. Builtat using
+                                            HTML,
+                                            CSS and Bootstrap</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
                                         GITHUB</a>
@@ -468,7 +469,7 @@
                                             <br>
                                             <span class="fa fa-map-marker fa-fw text-muted" data-toggle="tooltip"
                                                 title="" data-original-title="7396 E North St"></span>
-                                            <span class="text-muted">7396 E North St</span>
+                                            <span class="text-muted">Kigali, Rwanda</span>
                                             <br>
                                             <span class="fa fa-phone fa-fw text-muted" data-toggle="tooltip" title=""
                                                 data-original-title="(560) 180-4143"></span>
@@ -484,13 +485,17 @@
 
 
                                         <div class="icons">
+                                            <p class="card-text4">
+                                                Connect with me
+                                            </p>
                                             <a href="https://web.facebook.com/Faustin250" class="fa fa-facebook"></a>
                                             <a href="#" class="fa fa-twitter"></a>
                                             <a href="https://www.instagram.com/faustin_250_/"
                                                 class="fa fa-instagram"></a>
                                             <a href="https://www.linkedin.com/in/faustin250/"
                                                 class="fa fa-linkedin"></a>
-                                            <a href="https://github.com/Faustin250" class="fa fa-github"></a> </div>
+                                            <a href="https://github.com/Faustin250" class="fa fa-github"></a>
+                                        </div>
                                     </div>
                                 </li>
                             </ul>
