changed projects section

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                                             HTML,
                                             CSS and Bootstrap</p>
                                     </div>
-                                    <a href="https://github.com/Faustin250/personal_Portfolio" class="button3">VIEW ON
-                                        GITHUB</a>
+                                    <a href="https://github.com/Faustin250/personal_Portfolio" class="button3"> View on
+                                        github</a>
 
 
                                 </div>
@@ -192,8 +192,8 @@
                                         <p class="card-text1"> Biograph page of Martin Luther King Jr. Built using plain
                                             HTML and CSS</p>
                                     </div>
-                                    <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
-                                        GITHUB</a>
+                                    <a href="https://github.com/Faustin250/tributePage" class="button3"> View on
+                                        github</a>
 
                                 </div>
 
@@ -225,8 +225,8 @@
                                             HTML,
                                             CSS and Bootstrap</p>
                                     </div>
-                                    <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
-                                        GITHUB</a>
+                                    <a href="https://github.com/Faustin250/tributePage" class="button3"> View on
+                                        github</a>
 
                                 </div>
 
@@ -254,12 +254,12 @@
                                     <!--Content-->
                                     <div class="card-body card_body_style">
                                         <h4 class="card_title_1">Application form</h4>
-                                        <p class="card-text1">Application form for a coding bootcamp. Builtat using
+                                        <p class="card-text1">Application form for a coding bootcamp. Built using
                                             HTML,
                                             CSS and Bootstrap</p>
                                     </div>
-                                    <a href="https://github.com/Faustin250/tributePage" class="button3">VIEW ON
-                                        GITHUB</a>
+                                    <a href="https://github.com/Faustin250/personal_Portfolio/blob/master/resources/project3.jpg?raw=true"
+                                        class="button3"> View on github</a>
 
                                 </div>
 
