changed projects section

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                             CSS and Bootstrap</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/personal_Portfolio" class="button3"> View on
-                                        github</a>
+                                        Github</a>
 
 
                                 </div>
@@ -193,7 +193,7 @@
                                             HTML and CSS</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/tributePage" class="button3"> View on
-                                        github</a>
+                                        Github</a>
 
                                 </div>
 
@@ -226,7 +226,7 @@
                                             CSS and Bootstrap</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/tributePage" class="button3"> View on
-                                        github</a>
+                                        Github</a>
 
                                 </div>
 
@@ -259,7 +259,7 @@
                                             CSS and Bootstrap</p>
                                     </div>
                                     <a href="https://github.com/Faustin250/personal_Portfolio/blob/master/resources/project3.jpg?raw=true"
-                                        class="button3"> View on github</a>
+                                        class="button3"> View on Github</a>
 
                                 </div>
 
