changed google form

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
                             <hr>
                             <!-- Text -->
                             <p class="card-text">
-                                I'm a Frontend Developer living in Rwanda, I am experienced with building
-                                websites using HTML,CSS and BOOTSTRAP.
+
+                                I am a web developer living in Rwanda. I build and mantain websites. I am experienced
+                                with HTML, CSS, Javascript, bootstrap and Wordpress. Reach out to me I would love to
+                                work for you.
+
                             </p>
 
                         </div>
@@ -160,8 +163,8 @@
                                             HTML,
                                             CSS and Bootstrap</p>
                                     </div>
-                                    <a href="https://github.com/Faustin250/personal_Portfolio" class="button3"> View on
-                                        Github</a>
+                                    <a href="https://faustin250.github.io/personal_Portfolio/" class="button3"> Live
+                                        demo</a>
 
 
                                 </div>
@@ -192,8 +195,7 @@
                                         <p class="card-text1"> Biograph page of Martin Luther King Jr. Built using plain
                                             HTML and CSS</p>
                                     </div>
-                                    <a href="https://github.com/Faustin250/tributePage" class="button3"> View on
-                                        Github</a>
+                                    <a href="https://codepen.io/Faustin250/pen/wvBygqK" class="button3"> Live demo</a>
 
                                 </div>
 
@@ -225,8 +227,8 @@
                                             HTML,
                                             CSS and Bootstrap</p>
                                     </div>
-                                    <a href="https://github.com/Faustin250/tributePage" class="button3"> View on
-                                        Github</a>
+                                    <a href="https://faustin250.github.io/personal_Portfolio/" class="button3"> Live
+                                        demo</a>
 
                                 </div>
 
@@ -247,7 +249,7 @@
                                     <!-- Image-->
                                     <div class="view overlay testimonials_image">
                                         <img class="card-img-top"
-                                            src="https://github.com/Faustin250/personal_Portfolio/blob/master/resources/project2.PNG?raw=true"
+                                            src="https://github.com/Faustin250/personal_Portfolio/blob/master/resources/project3.jpg?raw=true"
                                             alt="Example photo">
                                     </div>
 
@@ -258,8 +260,7 @@
                                             HTML,
                                             CSS and Bootstrap</p>
                                     </div>
-                                    <a href="https://github.com/Faustin250/personal_Portfolio/blob/master/resources/project3.jpg?raw=true"
-                                        class="button3"> View on Github</a>
+                                    <a href="https://codepen.io/Faustin250/pen/yLNBweK" class="button3"> Live demo</a>
 
                                 </div>
 
@@ -445,7 +446,7 @@
                     <div id="contact-container">
                         <iframe
                             src="https://docs.google.com/forms/d/e/1FAIpQLScYX91x-Oi3nqQq7YAOcibxn4Z8Mab4vYOWyPqLI3I-I54a3A/viewform?embedded=true"
-                            width="600" height="420" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                            width="600" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
                     </div>
 
