changed google form

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         <div class="container contact-details">
             <h2 class="contact_style">CONTACT</h2>
             <p class="card-text3">
-                Reach out to me. I would love to help you.
+                Reach out to me. I would love to work you.
             </p>
             <div class="row contact_style1">
                 <div class="col-lg-7 col-md-7 col-sm-12">
